--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ p {
 }
 
 /* navbar */
-.navbar {
-  background-color: #2c2d30;
+nav {
+  transition: 1s;
+}
+
+.bg-dark {
+  background-color: #2c2d30 !important;
 }
 
 .custom-toggler .navbar-toggler-icon {
@@ -30,6 +34,8 @@ p {
 /* jumbotron */
 .jumbotron {
   padding-top: 6rem;
+  padding-bottom: 1.5rem;
+  min-height: 100vh;
   background-color: #2c2d30;
 }
 
@@ -41,7 +47,7 @@ p {
 }
 
 .jumbotron-me {
-  padding: 30px 30px 20px;
+  padding: 50px 30px 20px;
   background-color: #2c2d30;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
   border-radius: 5%;
@@ -53,17 +59,23 @@ p {
   line-height: 30px;
 }
 
-.alvin {
-  background: url(img/guest.png);
+.img-thumbnail {
+  padding: 2rem;
+  border-radius: 20%;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+  background-color: #2c2d30;
+  border-color: #2c2d30;
+  content: url(img/guest.png);
 }
 
-.alvin:hover {
-  background: url(img/hero.png);
+.img-thumbnail:hover {
+  content: url(img/hero.png);
 }
 
 /* about */
 .about {
-  padding-top: 5rem;
+  padding-top: 7rem;
+  padding-bottom: 5rem;
   background-color: lightgray;
 }
 
@@ -135,16 +147,18 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid white; /* creates padding around scroll thumb */
 }
 
-/* Mobile version */
+/* Desktop version */
 @media (min-width: 992px) {
-  .navbar {
-    background-color: #2c2d30;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+  .bg-dark {
+    background-color: #2c2d30 !important;
   }
 
   .jumbotron {
-    padding-top: 230px;
-    margin-top: -70px;
+    padding-top: 13rem;
+  }
+
+  .jumbotron-me {
+    padding-top: 70px;
   }
 
   .about img {
